mysql/compliance/cnp-ingress-mysql-stig-v-235146-block-unused-ports.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-ingress-mysql-stig-v-235146-block-unused-ports
  namespace: default
spec:
  description: "To block all unused ports on MySQL pod"
  endpointSelector:
    matchLabels:
      app: mysql
  ingress:
    - fromEndpoints:
      - matchLabels:
          role: frontend # Change your match labels
      toPorts:
        - ports:
            - port: "3306"
        - ports:
            - port: "33060"
